Update index.html with image name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>I'm a Web Developer</h2>
     <hr>
     <h3><a href="http://127.0.0.1:3002/index.html">movie ranking</a></h3>
-    <img src="screenshot 2023-06-21 at 12.06.09 PM.png" width="400">
+    <img src="Screenshot%202023-06-21%20at%2012.06.09%20PM.png" width="400">
     <h3><a href="http://127.0.0.1:3000/public/birthday-invite.html">bday invitation project</a></h3>
     <img src="Screenshot 2023-06-28 at 2.59.20 PM.png" width="400">
   </body>  
