--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h2>I'm a Web Developer</h2>
     <hr>
     <h3><a href="http://127.0.0.1:3002/index.html">movie ranking</a></h3>
-    <img src="movie_ranking.png" width="400">
+    <img src="assets/images/movie-ranking.png" width="400">
     <h3><a href="http://127.0.0.1:3000/public/birthday-invite.html">bday invitation project</a></h3>
-    <img src="Screenshot 2023-06-28 at 2.59.20 PM.png" width="400">
+    <img src="assets/images/birthday-invite.png" width="400">
   </body>  
 </html>
 
